--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
         <small></small>
 <!--夫丈夫遇事似山岗，毁也端庄，誉也端庄！-->
 	<br>
-        <img src = "https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495539602393&di=8a0ac97c214fd3b222275aecfb903b0a&imgtype=0&src=http%3A%2F%2Fpic1.win4000.com%2Fwallpaper%2F8%2F57a82fbd4e504.jpg" style="width:1200px;height:400px;">
+        <img src = "https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1495539602393&di=8a0ac97c214fd3b222275aecfb903b0a&imgtype=0&src=http%3A%2F%2Fpic1.win4000.com%2Fwallpaper%2F8%2F57a82fbd4e504.jpg" >
 	<hr>
         <ul>
             {% for post in paginator.posts %}
